--- a/projects/connectedhomeip/Dockerfile
+++ b/projects/connectedhomeip/Dockerfile
@@ -14,6 +14,7 @@
 #
 ################################################################################
 
+
 FROM gcr.io/oss-fuzz-base/base-builder
 
 # Install prerequisite packages
@@ -23,22 +24,22 @@ RUN apt-get update && \
         libavahi-client-dev ninja-build \
         unzip libgirepository1.0-dev libcairo2-dev libreadline-dev
 
-# Installing Python3.10 and using it instead of the default Python taken from the base-builder image
+# Installing Python3.9 and using it instead of the default Python taken from the base-builder image
 RUN apt-get update && \
     apt-get install -y software-properties-common && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
-    apt-get install -y pkg-config python3.10 python3.10-dev python3.10-venv && \
-    ln --force -s /usr/bin/python3.10 /usr/bin/python3
+    apt-get install -y pkg-config python3.9 python3.9-dev python3.9-venv && \
+    ln --force -s /usr/bin/python3.9 /usr/bin/python3
 
 # Ensure python that was just installed gets precedence over
 # the one already installed in /usr/local/bin
 ENV PATH="/usr/bin/:${PATH}"
 
-RUN python3 -m ensurepip --upgrade
+#RUN python3 -m ensurepip --upgrade
 
 # PEP-517 needed for cryptography. Update pip
-RUN python3 -m pip install --upgrade pip setuptools wheel packaging
+RUN pip install --upgrade pip setuptools wheel packaging
 
 # Install Rust for building `cryptography` python package when bootstraping pigweed
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
