use ubuntu 24.04 base builder

--- a/projects/connectedhomeip/Dockerfile
+++ b/projects/connectedhomeip/Dockerfile
@@ -14,8 +14,7 @@
 #
 ################################################################################
 
-
-FROM gcr.io/oss-fuzz-base/base-builder
+FROM gcr.io/oss-fuzz-base/base-builder:ubuntu-24-04
 
 # Install prerequisite packages
 # See connectedhomeip/docs/guides/BUILDING.md#prerequisites
@@ -23,34 +22,6 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends pkg-config libssl-dev libdbus-1-dev libglib2.0-dev \
         libavahi-client-dev ninja-build \
         unzip libgirepository1.0-dev libcairo2-dev libreadline-dev
-
-# Build Python 3.10 from source (no more available in deadsnakes for Ubuntu 20.04)
-# ONCE OSS-Fuzz release Base image with Ubuntu 24.04, we can switch to that and stop building python from source
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-        build-essential zlib1g-dev libncurses5-dev libgdbm-dev libgdbm-compat-dev \
-        libnss3-dev libffi-dev libsqlite3-dev wget curl ca-certificates \
-        libbz2-dev liblzma-dev xz-utils uuid-dev && \
-    rm -rf /var/lib/apt/lists/* && \
-    cd /tmp && set -eux; \
-    curl -fL https://www.python.org/ftp/python/3.10.14/Python-3.10.14.tgz -o Python-3.10.14.tgz && \
-    tar -xf Python-3.10.14.tgz && \
-    cd Python-3.10.14 && \
-    ./configure --prefix=/usr/local \
-                --with-lto --enable-shared && \
-    make -j"$(nproc)" && \
-    make altinstall && \
-    ln --force -s /usr/local/bin/python3.10 /usr/bin/python3 && \
-    ln --force -s /usr/local/bin/pip3.10 /usr/bin/pip3 && \
-    echo "/usr/local/lib" > /etc/ld.so.conf.d/python3.10.conf && ldconfig && \
-    cd / && rm -rf /tmp/Python-3.10.14*
-
-
-# Reinstall GLib development headers (workaround needed for gio/gio.h)
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends libglib2.0-dev
-
-RUN python3 -m ensurepip --upgrade
 
 # PEP-517 needed for cryptography. Update pip
 RUN python3 -m pip install --upgrade pip setuptools wheel packaging
